Update tab strip foreground colors on activation and color changes.

The previous CL (https://crrev.com/c/1089723) only focused on getting the tab
colors from the browser frame. This CL focuses on ensuring the tab strip is
notified of activation and color changes so those colors can be recalculated.

Bug: 852388
Change-Id: Ib66c43038e1e8ea823fe991e55239754e5fce097
Reviewed-on: https://chromium-review.googlesource.com/1099048
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#567617}
Former-commit-id: c04d6f470c86695c535ba722d33f834adba0c7a8